APP file version

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
                         <option>B+</option>
                         <option>O+</option>
                         <option>AB+</option>
+                        <option>AB-</option>
                         <option>A-</option>
                         <option>B-</option>
                         <option>O-</option>
@@ -98,6 +99,16 @@
                                 
                 {% for task in list1 %}
                 <table style="width:190%">
+                    <td><b>ID</b></td>
+                    <td><b>FirstName</b></td>
+                    <td><b>LastName</b></td>
+                    <td><b>Gender</b></td>
+                    <td><b>Age</b></td>
+                    <td><b>BLood Group</b></td>
+                    <td><b>Address</b></td>
+                    <td><b>Mobile Number</b></td>
+                    <td><b>Email ID</b></td>
+
 
                 <tr>
                         <td>{{ task.id }}</td>
